--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Amicable Numbers</title>
+    <meta charset="UTF-8">
+    <script>
+        function isAFactor(x, y) {
+            if (x % y == 0) return true;
+            return false;
+        }
 
+        function sum(x) {
+            for (var i = 0; i < x.length; i++) {
+                sum += x[i];
+            }
+            return sum;
+        }
+    </script>
+</head>
+
+<body>
+    <form>
+        <input type="text" id="num1" name="num1">
+        <input type="text" id="num2" name="num2">
+        <input type="submit"> <br/>
+    </form>
+    
+    <script type="text/javascript">
+        document.getElementById("num1").innerHTML = num1;
+        document.getElementById("num2").innerHTML = num2;
+        
+        factors1 = [1];
+        for (var i = 2; i <= num1; i++) {
+            if (isAFactor(num1, i)) factors1.push(i);
+        }
+        sum1 = sum(factors1);
+
+        factors2 = [1];
+        for (var i = 2; i <= num2; i++) {
+            if (isAFactor(num1, i)) factors2.push(i);
+        }
+        sum2 = sum(factors2);
+
+        if (sum1 != num2 || sum2 != num1) document.getElementById('bool').innerHTML = not;
+
+        document.getElementById('factors1').innerHTML = factors1.join(', ');
+        document.getElementById('factors2').innerHTML = factors2.join(', ');
+
+    </script>
+
+    <div id="result">The numbers: <span id="num1"></span> and <span id="num2"></span> are <span id="bool"></span> amicable</div>
+    <div id="factors">Factors of <span id="num1"></span> are <span id="factors1"></span></div>
+    <div id="factors">Factors of <span id="num2"></span> are <span id="factors2"></span></div>
+</body>
+</html>
