--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     </script>
 
-    <div id="result"></div>
+    <div id="result">abbbbba</div>
     <div id="factors"></div>
 </body>
 </html>
