--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             }
             return sum;
         }
+
     </script>
     <style type="text/css">
         div {display: inline-block; padding: 0.5em; margin: 0.5}
@@ -32,6 +33,8 @@
     <script type="text/javascript">
         num1 = document.getElementByName("num1");
         num2 = document.getElementByName("num2");
+
+        document.write(num1);
         
         factors1 = [1];
         for (var i = 2; i <= num1; i++) {
