--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </form></div>
     
     <script type="text/javascript">
-        num1 = document.getElementByName("num1");
-        num2 = document.getElementByName("num2");
+        num1 = document.getElementByName("num1").value;
+        num2 = document.getElementByName("num2").value;
 
         document.write(num1);
         
