--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         // num1 = document.getElementByName("num1").value;
         // num2 = document.getElementByName("num2").value;
 
-        // document.write(num1);
+        document.write(num1);
         
         factors1 = [1];
         for (var i = 2; i <= num1; i++) {
