--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <form>
         Number 1: <input type="text" id="num1" name="num1">
         Number 2: <input type="text" id="num2" name="num2">
-        <input type="button" onclick="setVals(num1, num2)">
+        <input type="button" onclick="setVals(num1.value, num2.value)">
     </form></div>
     
     <script type="text/javascript">
