--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         var num1 = document.getElementById("num1").value;
         var num2 = document.getElementById("num2").value;
 
-        document.write(num1);
+        alert(num1);
         
         let factors1 = [1];
         for (var i = 2; i <= num1; i++) {
