--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             var num1 = document.getElementById("num1").value;
             var num2 = document.getElementById("num2").value;
 
-            
+            document.write(num1);
+
             let factors1 = [1];
             for (var i = 2; i <= num1; i++) {
                 if (isAFactor(num1, i)) factors1.push(i);
