--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             var num1 = document.getElementById("num1").value;
             var num2 = document.getElementById("num2").value;
 
-            document.write(num1);
+            document.write(num1 + " " + num2);
 
             let factors1 = [1];
             for (var i = 2; i <= num1; i++) {
