--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
         function sum(x) {
             for (var i = 0; i < x.length; i++) {
-                sum += x[i];
+                value += x[i];
             }
-            return sum;
+            return value;
         }
 
     </script>
