--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             let factors1 = [1];
             for (var i = 2; i <= num1; i++) {
                 if (isAFactor(num1, i) == true) factors1.push(i);
-                document.write(i);
             }
+            document.write("<br/>" + factors1.join(" ") + "<br/>");
             var sum1 = sum(factors1);
             document.write('sum: ' + sum1);
 
