--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         function sum(x) {
             for (var i = 0; i < x.length; i++) {
                 value += x[i];
+                document.write(value);
             }
             return value;
         }
@@ -39,15 +40,14 @@
             var num2 = document.getElementById("num2").value;
 
             let factors1 = [1];
-            for (var i = 2; i <= num1; i++) {
+            for (var i = 2; i < num1; i++) {
                 if (isAFactor(num1, i) == true) factors1.push(i);
             }
-            document.write("<br/>" + factors1.join(" ") + "<br/>");
             var sum1 = sum(factors1);
             document.write('sum: ' + sum1);
 
             let factors2 = [1];
-            for (var i = 2; i <= num2; i++) {
+            for (var i = 2; i < num2; i++) {
                 if (isAFactor(num1, i) == true) factors2.push(i);
             }
             var sum2 = sum(factors2);
