--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         }
 
         function sum(x) {
+            value = 0;
             for (var i = 0; i < x.length; i++) {
                 value += x[i];
                 document.write(value);
