--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             value = 0;
             for (var i = 0; i < x.length; i++) {
                 value += x[i];
-                document.write(value);
+                document.write(value + " ");
             }
             return value;
         }
