--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
             value = 0;
             for (var i = 0; i < x.length; i++) {
                 value += x[i];
-                document.write(value + " ");
             }
             return value;
         }
@@ -44,8 +43,9 @@
             for (var i = 2; i < num1; i++) {
                 if (isAFactor(num1, i) == true) factors1.push(i);
             }
-            var sum1 = sum(factors1);
-            document.write('sum: ' + sum1);
+            var add1 = 0;
+            add1 = sum(factors1);
+            document.write('sum: ' + add1);
 
             let factors2 = [1];
             for (var i = 2; i < num2; i++) {
