--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             let factors2 = [1];
             for (var j = 2; j < num2; j++) {
-                if (isAFactor(num2, j) == true) factors .push(j);
+                if (isAFactor(num2, j) == true) factors2.push(j);
             }
             var add2 = 0;
             add2 = sum(factors2);
