--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
             add2 = sum(factors2);
 
             if (add1 != num2 || add2 != num1) {
-                document.getElementById('result').innerHTML = 'The numbers: ${num1} and ${num2} are not amicable';
+                document.getElementById('result').innerHTML = 'The numbers: ' + num1 + ' and ' + num2 + ' are not amicable';
             } else {
-                document.getElementById('result').innerHTML = 'The numbers: ${num1} and ${num2} are amicable';
+                document.getElementById('result').innerHTML = 'The numbers: ' + num1 + ' and ' + num2 + ' are amicable';
             }
 
-            document.getElementById('factors').innerHTML = 'Factors of ${num2} are ${factors1.join(', ')}; Factors of ${num2} are ${factors2.join(', ')}';
+            document.getElementById('factors').innerHTML = 'Factors of ' + num1 + ' are ' + factors1.join(', ') + '<br/>Factors of ' + num2 + ' are ' + factors2.join(', ');
         }
     </script>
 
